zebra-scan/src/storage/db/tests/snapshots/sapling_keys@empty.snap
---
source: zebra-scan/src/storage/db/tests/snapshot.rs
expression: sapling_keys_and_birthday_heights
---
{}
