zebra-scan/src/storage/db/tests/snapshots/sapling_tx_ids_raw_data@mainnet_keys.snap
---
source: zebra-scan/src/storage/db/tests/snapshot.rs
expression: cf_data
---
[
  KV(
    k: "7a78766965777331713064757974676371717171707172653236776b6c343567767777776437303678773630386875636d7666616c72373539656a7766377173686a663572396161373332337a756c767a36706c68747470356d6c747163677339743033396378326430396d67713035747336336e387533356879763668396e633963747171747565327537636572326d716567756e75756c71326c7568713379776a637a333579796c6a657761346d676b676a7a79667768366672366a6430647a64343467686b306e78647632686e76346a356e7866777632347277646d676c6c68653070383536387367717439636b74303276326b786635616874716c3673306c746a706b636b77386774796d787478757539676372307377767a06657f0000",
    v: "",
  ),
  KV(
    k: "7a78766965777366616b650f423f0000",
    v: "",
  ),
]
